# serializer version: 1
# name: test_agg_ok[pipe_agg_group_by_cube]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      cube_list
                        cube_list
                          ident	col3
                        bigquery__literal
                          struct_literal
                            ident	col4
                            ident	col5
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_empty]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      grouping_item_empty
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_grouping_sets]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      grouping_set_list
                        grouping_set_list
                          grouping_set_list
                            grouping_set
                              ident	col3
                          grouping_set
                            bigquery__literal
                              struct_literal
                                ident	col4
                                ident	col5
                        grouping_set
                          ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_multi_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
                      ident	col4
                    grouping_item
                      ident	col5
                      ident	col6
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_rollup]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      rollup_list
                        rollup_list
                          ident	col3
                        ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
  
  '''
# ---
# name: test_agg_ok[pipe_agg_group_by_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                group_by
                  grouping_items
                    grouping_item
                      ident	col3
                      ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_multi_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col3
                    as_alias
                      ident	col4
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
  
  '''
# ---
# name: test_agg_ok[pipe_agg_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_agg
                agg_list
                  agg_item
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_as_ok[pipe_as_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_as
                ident	table2
  
  '''
# ---
# name: test_call_ok[call]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_call
                function_call_expr
                  ident	APPENDS
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        bigquery__string_literal	'1970-01-01'
  
  '''
# ---
# name: test_call_ok[call_alias_explicit]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_call
                function_call_expr
                  ident	APPENDS
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        bigquery__string_literal	'1970-01-01'
                as_alias
                  ident	table2
  
  '''
# ---
# name: test_call_ok[call_alias_implicit]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_call
                function_call_expr
                  ident	APPENDS
                  bigquery__function_args
                    bigquery__pos_arg
                      bigquery__literal
                        bigquery__string_literal	'1970-01-01'
                as_alias
                  ident	table2
  
  '''
# ---
# name: test_join_ok[join_cross]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria	CROSS
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_full]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria	FULL
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_full_outer]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria
                    FULL
                    OUTER
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_inner]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria	INNER
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_left]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria	LEFT
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_left_outer]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria
                    LEFT
                    OUTER
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_on_compound_expr]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  on_clause
                    bigquery__and_expr
                      bigquery__eq_expr
                        ident	col1
                        ident	col2
                      bigquery__ne_expr
                        ident	col3
                        ident	col4
  
  '''
# ---
# name: test_join_ok[join_on_single_expr]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  on_clause
                    bigquery__eq_expr
                      ident	col1
                      ident	col2
  
  '''
# ---
# name: test_join_ok[join_right]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria	RIGHT
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_right_outer]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join_with_criteria
                  join_criteria
                    RIGHT
                    OUTER
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_join_ok[join_using_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
                      ident	col2
  
  '''
# ---
# name: test_join_ok[join_using_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_join
                join
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table2
                  using_clause
                    using_columns
                      ident	col1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_integer_literal]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_limit
                integer_literal	1
  
  '''
# ---
# name: test_limit_ok[pipe_limit_param]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_limit
                parameter	limit
  
  '''
# ---
# name: test_order_by_ok[order_by_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  bigquery__order_by_item
                    ident	col1
                  bigquery__order_by_item
                    ident	col2
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_kitchen_sink]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  bigquery__order_by_item
                    ident	col1
                    bigquery__order_by_item_sort	ASC
                    bigquery__order_by_item_nulls	FIRST
                  bigquery__order_by_item
                    ident	col2
                    bigquery__order_by_item_sort	DESC
                    bigquery__order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_nulls]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  bigquery__order_by_item
                    ident	col1
                    bigquery__order_by_item_nulls	FIRST
                  bigquery__order_by_item
                    ident	col2
                    bigquery__order_by_item_nulls	LAST
  
  '''
# ---
# name: test_order_by_ok[order_by_multi_sort]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  bigquery__order_by_item
                    ident	col1
                    bigquery__order_by_item_sort	ASC
                  bigquery__order_by_item
                    ident	col2
                    bigquery__order_by_item_sort	DESC
  
  '''
# ---
# name: test_order_by_ok[order_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_order_by
                order_by_items
                  bigquery__order_by_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
                  drop_item
                    ident	col2
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_drop_ok[pipe_drop_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_drop
                drop_list
                  drop_item
                    ident	col1
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                    as_alias
                      ident	col2
                  extend_item
                    function_call_expr
                      ident	EXP
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from]
  '''
  start
    query_statement
      query_expr
        pipe_from
          from_clause
            bigquery__from_item_table
              bigquery__path_expression
                ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        ident	col1
                  bigquery__select_from
                    from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      ident	col1
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
                  rename_item
                    ident	col3
                    as_alias
                      ident	col4
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_rename_ok[pipe_rename_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_rename
                rename_list
                  rename_item
                    ident	col1
                    as_alias
                      ident	col2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
                  set_item
                    ident	col2
                    function_call_expr
                      ident	EXP
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pipe_set_ok[pipe_set_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set
                set_list
                  set_item
                    ident	col1
                    function_call_expr
                      ident	POW
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                        bigquery__pos_arg
                          bigquery__literal
                            integer_literal	2
  
  '''
# ---
# name: test_pivot_ok[pivot]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_pivot
                pivot_clause
                  function_call_expr
                    ident	SUM
                    bigquery__function_args
                      bigquery__pos_arg
                        ident	col1
                  ident	quarter
                  struct_literal
                    bigquery__literal
                      bigquery__string_literal	'Q1'
                    bigquery__literal
                      bigquery__string_literal	'Q2'
  
  '''
# ---
# name: test_pivot_ok[pivot_aliased]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_pivot
                pivot_clause
                  function_call_expr
                    ident	SUM
                    bigquery__function_args
                      bigquery__pos_arg
                        ident	col1
                  ident	quarter
                  struct_literal
                    bigquery__literal
                      bigquery__string_literal	'Q1'
                    bigquery__literal
                      bigquery__string_literal	'Q2'
                as_alias
                  ident	col2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_all_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	EXCEPT
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	EXCEPT
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                    set_operation_columns
                      ident	col1
                      ident	col2
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_by_name_on_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	EXCEPT
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                    set_operation_columns
                      ident	col1
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_corresponding]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_corresponding
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_distinct_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	INTERSECT
                  set_operation_mode	DISTINCT
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	2
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_strict_corresponding
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_strict_corresponding_by]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation
                  set_operation_kind	EXCEPT
                  set_operation_mode	ALL
                  set_operation_modifier_strict_corresponding
                    set_operation_columns
                      ident	col1
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_full]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation_with_criteria
                  set_operation_criteria	FULL
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_inner]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation_with_criteria
                  set_operation_criteria	INNER
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation_with_criteria
                  set_operation_criteria	LEFT
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_set_operation_ok[set_operation_with_criteria_left_outer]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_set_operation
                set_operation_with_criteria
                  set_operation_criteria
                    LEFT
                    OUTER
                  set_operation_kind	UNION
                  set_operation_mode	ALL
                  set_operation_modifier_by_name
                  set_operation_list
                    subquery
                      query_expr
                        select
                          select_list
                            bigquery__select_item
                              bigquery__select_expr
                                bigquery__literal
                                  integer_literal	1
                                as_alias
                                  ident	col1
  
  '''
# ---
# name: test_tablesample_ok[tablesample]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_tablesample
                tablesample_perc
                  integer_literal	10
  
  '''
# ---
# name: test_unpivot_ok[unpivot]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_unpivot
                unpivot_clause
                  unpivot_values_column
                    ident	col1
                  unpivot_name_column
                    ident	quarter
                  unpivot_column_list
                    ident	q1
                    ident	q2
  
  '''
# ---
# name: test_unpivot_ok[unpivot_aliased]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_unpivot
                unpivot_clause
                  unpivot_values_column
                    ident	col1
                  unpivot_name_column
                    ident	quarter
                  unpivot_column_list
                    ident	q1
                    ident	q2
                as_alias
                  ident	col2
  
  '''
# ---
# name: test_where_ok[pipe_where_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_where
                ident	col1
  
  '''
# ---
# name: test_window_ok[window_frame_range]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_frame
                        RANGE
                        window_frame_between
                          window_frame_between_numeric_preceding
                            window_frame_numeric_preceding
                              bigquery__literal
                                integer_literal	1
                            window_frame_between_end_a
                              window_frame_numeric_following
                                bigquery__literal
                                  integer_literal	1
  
  '''
# ---
# name: test_window_ok[window_frame_rows]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_frame
                        ROWS
                        window_frame_between
                          window_frame_between_unbounded_preceding
                            window_frame_unbounded_preceding
                            window_frame_between_end_a
                              window_frame_unbounded_following
  
  '''
# ---
# name: test_window_ok[window_order_by_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_order_by
                        order_by_items
                          bigquery__order_by_item
                            ident	col2
                          bigquery__order_by_item
                            ident	col3
  
  '''
# ---
# name: test_window_ok[window_order_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_order_by
                        order_by_items
                          bigquery__order_by_item
                            ident	col2
  
  '''
# ---
# name: test_window_ok[window_parition_and_order_by]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_partition_by
                        ident	col2
                      window_order_by
                        order_by_items
                          bigquery__order_by_item
                            ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_partition_by
                        ident	col2
                        ident	col3
  
  '''
# ---
# name: test_window_ok[window_partition_by_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
                      window_partition_by
                        ident	col2
  
  '''
# ---
# name: test_window_ok[window_simple]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    ident	table1
          pipe_item
            pipe_operator
              pipe_window
                window_expr_list
                  window_expr
                    function_call_expr
                      ident	SUM
                      bigquery__function_args
                        bigquery__pos_arg
                          ident	col1
                    window_spec
  
  '''
# ---
